--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>teste</title>
+    <title>Contador</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/script.js"></script>
 </head>
 <body>
-     <h1>Página de testes</h1>
+     <h1>Contador</h1>
+     <p>Clique em um dos botões para acrecentar ou reduzir o valor.</p>
+     <div id="counter">
+        <button name="subtrair" id="decrementar" onclick="decrement()">-</button>
+        <span id="currentNumber">0</span>
+        <button name="adicionar" onclick="increment()">+</button>
+     </div>
+     <script src="assets/js/script.js"></script>
 </body>
 </html>
